--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
                     Una gran variedad de libros te espera aquí
                 </p>
                 <p>
-                    <a href="#" class="btn btn-primary my-2">Saber más</a>
+                    <a href="#" class="btn btn-secondary my-2">Saber más</a>
                 </p>
             </div>
         </section>
@@ -63,7 +63,7 @@
                             </p>
                             <p class="lead" id="prod-one">32,99€</p>
                             <div class="d-grid">
-                                <a href="#" class="btn btn-primary">Comprar</a>
+                                <a href="#" class="btn btn-secondary">Comprar</a>
                             </div>
                         </div>
                     </div>
@@ -101,7 +101,7 @@
                                 <input type="checkbox" value="remember-me" /> Soy humano
                             </label>
                         </div>
-                        <button class="w-100 btn btn-lg btn-primary" type="submit">
+                        <button class="w-100 btn btn-lg btn-secondary" type="submit">
                             Registrarme
                         </button>
                         <hr class="my-4" />
