--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,30 +7,13 @@
 <body>
 <main>
     <div class="cover p-lg-4">
-        <!-- NAV -->
-        <nav class="d-flex p-3 flex-column">
-            <div class="mx-auto">
-                <h3 class="mb-1 text-logo">Ezbooks</h3>
-            </div>
-            <div class="mx-auto">
-                <nav class="nav nav-masthead justify-content-center float-md-end">
-                    <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Inicio</a>
-                    <a class="nav-link fw-bold py-1 px-0" href="#">Productos</a>
-                    <a class="nav-link fw-bold py-1 px-0" href="#">Login</a>
-                    <a class="nav-link fw-bold py-1 px-0" href="#">Registrar</a>
-                </nav>
-            </div>
-        </nav>
+        <div th:replace="~{fragments/navbar}"></div>
         <!-- HOME SECCTION -->
         <section id="home" class="py-5 text-center">
             <div class="container">
                 <h1 class="display-5 fw-bold text-white">Explora</h1>
-                <p class="lead text-light">
-                    Una gran variedad de libros te espera aquí
-                </p>
-                <p>
-                    <a href="#" class="btn btn-secondary my-2">Saber más</a>
-                </p>
+                <p class="lead text-light">Una gran variedad de libros te espera aquí</p>
+                <div><a href="#" class="btn btn-secondary my-2">Saber más</a></div>
             </div>
         </section>
     </div>
