Update text at register section

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 <main>
     <div class="cover p-lg-4">
         <div th:replace="~{fragments/navbar}"></div>
-        <!-- HOME SECCTION -->
+        <!-- HOME SECTION -->
         <section id="home" class="py-5 text-center">
             <div class="container">
                 <h1 class="display-5 fw-bold text-white">Explora</h1>
@@ -18,7 +18,7 @@
         </section>
     </div>
 
-    <!-- TOP SELLS PRODUCTS SECCTION -->
+    <!-- TOP SELLS PRODUCTS SECTION -->
     <section id="#" class="py-5 bg-light">
         <div class="text-center">
             <h4 class="display-4 fw-bold lh-1 mb-4">Top ventas</h4>
@@ -56,15 +56,14 @@
         </div>
     </section>
 
-    <!-- REGISTER SECCTION -->
+    <!-- REGISTER SECTION -->
     <section id="subscribe">
         <div class="container col-xl-10 col-xxl-8 px-4 py-5">
             <div class="row align-items-center g-lg-5 py-5">
                 <div class="col-lg-7 text-center text-lg-start">
-                    <h4 class="display-5 fw-bold lh-1 mb-3">Registrarme</h4>
+                    <h4 class="display-5 fw-bold lh-1 mb-3">Benefíciate</h4>
                     <p class="col-lg-10 fs-4">
-                        ¿Todavía no sabes como comprar?<br/> Registrate aquí mismo y
-                        descubre las ventajas de ser un nuevo usuario.
+                        Registrate aquí mismo y descubre las ventajas de ser un nuevo usuario.
                     </p>
                 </div>
                 <div class="col-md-10 mx-auto col-lg-5">
