Nuevo estilo navbar y logo

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -28,8 +28,8 @@ html {
  * Header
  */
 .nav-masthead .nav-link {
-  color: rgba(255, 255, 255, 0.5);
-  border-bottom: .25rem solid transparent;
+  color: rgba(255, 255, 255, 0.75);
+  border-bottom: .2rem solid transparent;
 }
 
 .nav-masthead .nav-link:hover,
@@ -44,17 +44,6 @@ html {
 .nav-masthead .active {
   color: rgb(255, 255, 255);
   border-bottom-color: var(--primary-color-light);
-}
-
-.nav-scroller .nav {
-  display: flex;
-  flex-wrap: nowrap;
-  padding-bottom: 1rem;
-  margin-top: -1px;
-  overflow-x: auto;
-  text-align: center;
-  white-space: nowrap;
-  -webkit-overflow-scrolling: touch;
 }
 
 /*
@@ -79,3 +68,10 @@ main{
   max-width: 281px;
   max-height: 210px;
 }
+
+@media only screen and (min-width: 992px)  {
+  .visually-hidden-lg {
+    display: none;
+  }
+}
+
