--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -1,7 +1,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" href="data:;base64,iVBORw0KGgo=" type="image/x-icon">
+<link rel="icon" href="data:image/svg+xml,%3Csvg viewBox='-2.4 -2.4 28.80 28.80' xmlns='http://www.w3.org/2000/svg' fill='%23000000' stroke='%23000000' stroke-width='0.024'%3E%3Cg id='SVGRepo_bgCarrier' stroke-width='0'%3E%3C/g%3E%3Cg transform='translate(0 -1028.4)'%3E%3Cpath d='m3 8v2 1 3 1 5 1c0 1.105 0.8954 2 2 2h14c1.105 0 2-0.895 2-2v-1-5-4-3h-18z' transform='translate(0 1028.4)' fill='%23F27405'%3E%3C/path%3E%3Cpath d='m3 1035.4v2 1 3 1 5 1c0 1.1 0.8954 2 2 2h14c1.105 0 2-0.9 2-2v-1-5-4-3h-18z' fill='%23ecf0f1'%3E%3C/path%3E%3Cpath d='m3 1034.4v2 1 3 1 5 1c0 1.1 0.8954 2 2 2h14c1.105 0 2-0.9 2-2v-1-5-4-3h-18z' fill='%23bdc3c7'%3E%3C/path%3E%3Cpath d='m3 1033.4v2 1 3 1 5 1c0 1.1 0.8954 2 2 2h14c1.105 0 2-0.9 2-2v-1-5-4-3h-18z' fill='%23ecf0f1'%3E%3C/path%3E%3Cpath d='m5 1c-1.1046 0-2 0.8954-2 2v1 4 2 1 3 1 5 1c0 1.105 0.8954 2 2 2h2v-1h-1.5c-0.8284 0-1.5-0.672-1.5-1.5s0.6716-1.5 1.5-1.5h12.5 1c1.105 0 2-0.895 2-2v-1-5-4-3-1c0-1.1046-0.895-2-2-2h-4-10z' transform='translate(0 1028.4)' fill='%23F27405'%3E%3C/path%3E%3Cpath d='m8 1v18h1 9 1c1.105 0 2-0.895 2-2v-1-5-4-3-1c0-1.1046-0.895-2-2-2h-4-6-1z' transform='translate(0 1028.4)' fill='%23ff9300'%3E%3C/path%3E%3C/g%3E%3C/svg%3E" type="image/x-icon">
 <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
 <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/all.css}">
 <link rel="stylesheet" th:href="@{/css/style.css}">
