--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,13 +1,38 @@
-<nav class="d-flex p-3 flex-column">
-  <div class="mx-auto">
-    <h3 class="mb-1 text-logo">Ezbooks</h3>
-  </div>
-  <div class="mx-auto">
-    <nav class="nav nav-masthead justify-content-center float-md-end">
-      <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Inicio</a>
-      <a class="nav-link fw-bold py-1 px-0" href="#">Productos</a>
-      <a class="nav-link fw-bold py-1 px-0" href="#">Login</a>
-      <a class="nav-link fw-bold py-1 px-0" href="#">Registrar</a>
-    </nav>
-  </div>
+<nav class="navbar navbar-expand-lg navbar-dark text-bg-dark sticky-top">
+    <div class="container">
+        <a href="/" class="d-flex align-items-center mb-0 mb-lg-0 text-white text-decoration-none">
+            <svg width="40px" height="40px" viewBox="-2.4 -2.4 28.80 28.80" xmlns="http://www.w3.org/2000/svg" fill="#000000" stroke="#000000" stroke-width="0.024"><g id="SVGRepo_bgCarrier" stroke-width="0"></g> <g transform="translate(0 -1028.4)"> <path d="m3 8v2 1 3 1 5 1c0 1.105 0.8954 2 2 2h14c1.105 0 2-0.895 2-2v-1-5-4-3h-18z" transform="translate(0 1028.4)" fill="#F27405"></path> <path d="m3 1035.4v2 1 3 1 5 1c0 1.1 0.8954 2 2 2h14c1.105 0 2-0.9 2-2v-1-5-4-3h-18z" fill="#ecf0f1"></path> <path d="m3 1034.4v2 1 3 1 5 1c0 1.1 0.8954 2 2 2h14c1.105 0 2-0.9 2-2v-1-5-4-3h-18z" fill="#bdc3c7"></path> <path d="m3 1033.4v2 1 3 1 5 1c0 1.1 0.8954 2 2 2h14c1.105 0 2-0.9 2-2v-1-5-4-3h-18z" fill="#ecf0f1"></path> <path d="m5 1c-1.1046 0-2 0.8954-2 2v1 4 2 1 3 1 5 1c0 1.105 0.8954 2 2 2h2v-1h-1.5c-0.8284 0-1.5-0.672-1.5-1.5s0.6716-1.5 1.5-1.5h12.5 1c1.105 0 2-0.895 2-2v-1-5-4-3-1c0-1.1046-0.895-2-2-2h-4-10z" transform="translate(0 1028.4)" fill="#F27405"></path> <path d="m8 1v18h1 9 1c1.105 0 2-0.895 2-2v-1-5-4-3-1c0-1.1046-0.895-2-2-2h-4-6-1z" transform="translate(0 1028.4)" fill="#ff9300"></path> </g></svg>
+            <span class="visually-hidden-lg">Ezbooks</span>
+        </a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuNavbar" aria-controls="menuNavbar" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon no-focus"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="menuNavbar">
+            <ul class="navbar-nav me-auto">
+                <li><a href="/" class="nav-link px-2 text-secondary">Inicio</a></li>
+                <li><a href="/products" class="nav-link px-2 text-white">Productos</a></li>
+                <li><a href="/about" class="nav-link px-2 text-white">Historia</a></li>
+            </ul>
+
+            <div class="text-lg-end me-2">
+                <a href="#" class="btn btn-outline-light ms-2 me-2">Iniciar Sesión</a>
+                <a href="#" class="btn btn-secondary">Registrarse</a>
+            </div>
+
+            <div class="dropdown text-lg-end">
+                <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle p-2" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                    <span class="text-white">Username</span><img src="https://github.com/jesuspinar.png" alt="mdo" width="32" height="32" class="rounded-circle">
+                </a>
+                <ul class="dropdown-menu text-small">
+                    <li><a class="dropdown-item" href="/user/new/product">Subir producto...</a></li>
+                    <li><a class="dropdown-item" href="/user/products-list">Mis productos</a></li>
+                    <li><a class="dropdown-item" href="/user/transactions">Transacciones</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="/user/logout">Salir</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </nav>
