--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Ezbooks</title>
+    <title>Ezbooks | Inicio</title>
     <meta th:replace="~{fragments/head}">
 </head>
 <body>
+<div th:replace="~{fragments/navbar}"></div>
 <main>
     <div class="cover p-lg-4">
-        <div th:replace="~{fragments/navbar}"></div>
         <!-- HOME SECTION -->
         <section id="home" class="py-5 text-center">
             <div class="container">
-                <h1 class="display-5 fw-bold text-white">Explora</h1>
-                <p class="lead text-light">Una gran variedad de libros te espera aquí</p>
-                <div><a href="#" class="btn btn-secondary my-2">Saber más</a></div>
+                <h1 class="display-5 fw-bold text-white">Ezbooks</h1>
+                <p class="lead text-light me-4">Una gran variedad de libros te espera aquí</p>
             </div>
         </section>
     </div>
