Links para testeo

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -17,8 +17,8 @@
             </ul>
 
             <div class="text-lg-end me-2">
-                <a href="#" class="btn btn-outline-light ms-2 me-2">Iniciar Sesión</a>
-                <a href="#" class="btn btn-secondary">Registrarse</a>
+                <a href="/login" class="btn btn-outline-light ms-2 me-2">Iniciar Sesión</a>
+                <a href="/register" class="btn btn-secondary">Registrarse</a>
             </div>
 
             <div class="dropdown text-lg-end">
@@ -26,9 +26,10 @@
                     <span class="text-white">Username</span><img src="https://github.com/jesuspinar.png" alt="mdo" width="32" height="32" class="rounded-circle">
                 </a>
                 <ul class="dropdown-menu text-small">
-                    <li><a class="dropdown-item" href="/user/new/product">Subir producto...</a></li>
+                    <li><a class="dropdown-item" href="/user/upload/product">Subir producto...</a></li>
                     <li><a class="dropdown-item" href="/user/products-list">Mis productos</a></li>
                     <li><a class="dropdown-item" href="/user/transactions">Transacciones</a></li>
+                    <li><a class="dropdown-item" href="/user/checkout">Finalizar compra</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="/user/logout">Salir</a></li>
                 </ul>
