Reajuste a las tarjetas de libro para el index

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,38 +20,60 @@
     <!-- TOP SELLS PRODUCTS SECTION -->
     <section id="#" class="py-5 bg-light">
         <div class="text-center">
-            <h4 class="display-4 fw-bold lh-1 mb-4">Top ventas</h4>
+            <h4 class="display-5 fw-bold lh-1 mb-4">Top ventas</h4>
         </div>
 
-        <div class="container px-4">
-            <div class="row justify-content-center gx-lg-4">
-                <!-- ITEM CARD -->
-                <div class="col" style="max-width: 410px; min-width: 340px" >
-                    <div class="card mb-4 box-shadow p-2">
-                        <div class="container card-img-top text-center mt-3">
-                            <img
-                                alt="default img"
-                                class="max-img-dimen"
-                                src="" th:src="@{/img/defaultBook.webp}"
-                                data-holder-rendered="true"
-                            />
-                        </div>
+        <div class="row gap-2 gap-lg-3 justify-content-center">
 
-                        <div class="card-body">
-                            <h5 class="card-title">Código Limpio</h5>
-                            <p class="card-text">
-                                Este libro se divide en tres partes. La primera describe los principios
-                                patrones y prácticas para escribir código limpio. La segunda parte ...
-                            </p>
-                            <p class="lead" id="prod-one">32,99€</p>
-                            <div class="d-grid">
-                                <a href="#" class="btn btn-secondary">Comprar</a>
-                            </div>
+            <!-- ITEM CARD -->
+            <div class="card mb-3 mx-0" style="max-width: 440px;">
+                <div class="row g-0">
+                    <div class="col-4 my-3">
+                        <img src="img/def.png" class="card-img h-100" alt="Portada libro">
+                    </div>
+                    <div class="col-8">
+                        <div class="card-body pe-0">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as ...</p>
+                            <p class="card-text fw-light">Precio: <span>4€</span></p>
+                            <a href="" class="btn btn-secondary w-100">Comprar</a>
                         </div>
                     </div>
                 </div>
-                <!-- LAST PRODUCT -->
             </div>
+            <!-- ITEM CARD -->
+            <div class="card mb-3 mx-0" style="max-width: 440px;">
+                <div class="row g-0">
+                    <div class="col-4 my-3">
+                        <img src="img/def.png" class="card-img h-100" alt="Portada libro">
+                    </div>
+                    <div class="col-8">
+                        <div class="card-body pe-0">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as ...</p>
+                            <p class="card-text fw-light">Precio: <span>4€</span></p>
+                            <a href="" class="btn btn-secondary w-100">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- ITEM CARD -->
+            <div class="card mb-3 mx-0" style="max-width: 440px;">
+                <div class="row g-0">
+                    <div class="col-4 my-3">
+                        <img src="img/def.png" class="card-img h-100" alt="Portada libro">
+                    </div>
+                    <div class="col-8">
+                        <div class="card-body pe-0">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as ...</p>
+                            <p class="card-text fw-light">Precio: <span>4€</span></p>
+                            <a href="" class="btn btn-secondary w-100">Comprar</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- LAST PRODUCT -->
         </div>
     </section>
 
@@ -60,7 +82,7 @@
         <div class="container col-xl-10 col-xxl-8 px-4 py-5">
             <div class="row align-items-center g-lg-5 py-5">
                 <div class="col-lg-7 text-center text-lg-start">
-                    <h4 class="display-5 fw-bold lh-1 mb-3">Benefíciate</h4>
+                    <h4 class="display-4 fw-bold lh-1 mb-3">Benefíciate</h4>
                     <p class="col-lg-10 fs-4">
                         Registrate aquí mismo y descubre las ventajas de ser un nuevo usuario.
                     </p>
@@ -68,24 +90,24 @@
                 <div class="col-md-10 mx-auto col-lg-5">
                     <form class="p-4 p-md-4 border rounded-3 bg-light">
                         <div class="form-floating mb-3">
-                            <input type="email" class="form-control" id="floatingEmail" placeholder="" />
+                            <input type="email" class="form-control" id="floatingEmail" placeholder=""/>
                             <label for="floatingEmail">Correo electrónico</label>
                         </div>
 
                         <div class="form-floating mb-3">
-                            <input type="password" class="form-control" id="floatingPwd" placeholder="" />
+                            <input type="password" class="form-control" id="floatingPwd" placeholder=""/>
                             <label for="floatingPwd">Contraseña</label>
                         </div>
 
                         <div class="checkbox mb-3">
                             <label>
-                                <input type="checkbox" value="remember-me" /> Soy humano
+                                <input type="checkbox" value="remember-me"/> Soy humano
                             </label>
                         </div>
                         <button class="w-100 btn btn-lg btn-secondary" type="submit">
                             Registrarme
                         </button>
-                        <hr class="my-4" />
+                        <hr class="my-4"/>
                         <small class="text-muted">Al hacer clic en Registrarme, aceptas las condiciones de uso.</small>
                     </form>
                 </div>
