--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -63,6 +63,11 @@ main{
   background-blend-mode: multiply;
   background-size: cover;
 }
+.ellipsis-auto{
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
 
 @media only screen and (min-width: 992px)  {
   .visually-hidden-lg {
