--- a/src/main/resources/templates/user/checkout.html
+++ b/src/main/resources/templates/user/checkout.html
@@ -17,7 +17,7 @@
             <h2 class="px-0 mb-3">Libro</h2>
 
             <div class="row mx-auto mb-3 bg-white border rounded-3 align-items-center" style="height: 43px">
-                <div class="col px-1 overflow-scroll">
+                <div class="col px-1 ellipsis-auto">
                     <span id="libro-titulo">Título</span>
                 </div>
                 <div class="col px-1 text-end text-muted border-start" style="max-width: 120px">
