--- a/src/main/resources/templates/user/upload.html
+++ b/src/main/resources/templates/user/upload.html
@@ -10,7 +10,7 @@
 
     <form class="row bg-body mx-auto my-lg-4 my-3" style="max-width: 760px" enctype="multipart/form-data" method="post"
           action="#">
-        <h1 class="display-4">Subir producto</h1>
+        <h1 class="display-5 fw-bold mt-4">Subir producto</h1>
 
         <div class="row mb-3">
             <div class="col-lg">
