--- a/src/main/resources/templates/libros.html
+++ b/src/main/resources/templates/libros.html
@@ -2,7 +2,7 @@
 <html lang="es" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>SecondHandMarket</title>
+  <title>Ezbooks | Productos</title>
   <meta th:replace="~{fragments/head}">
 </head>
 <body>
