--- a/src/main/resources/templates/app/compra/factura.html
+++ b/src/main/resources/templates/app/compra/factura.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>SecondHandMarket</title>
+  <title>Ezbooks | Factura</title>
   <meta th:replace="~{fragments/head}">
 
 </head>
