Added print factura to pdf

--- a/src/main/resources/templates/app/compra/factura.html
+++ b/src/main/resources/templates/app/compra/factura.html
@@ -50,6 +50,10 @@
       </table>
     </div>
   </div>
+  <form class="d-flex align-content-center">
+    <input class="bg-transparent border border-0"
+           type=button name=print value="Imprimir PDF" onClick="window.print()">
+  </form>
 </main>
 </body>
 </html>
