--- a/src/main/resources/templates/app/compra/listado.html
+++ b/src/main/resources/templates/app/compra/listado.html
@@ -14,9 +14,7 @@
     <tr>
       <th>ID</th>
       <th>Comprador</th>
-      <th>Vendedor</th>
-      <th>Libro</th>
-      <th>Total</th>
+      <th>Fecha</th>
       <th>Acciones</th>
     </tr>
     </thead>
@@ -24,13 +22,8 @@
     <tr th:each="compra : ${mis_compras}">
       <td th:text="${compra.id}">id</td>
       <td th:text="${compra.getPropietario().getNombre()}">comprador</td>
-      <td>vendedor</td>
-      <!-- <td th:text="${compra.getLibros()}">vendedor</td> -->
-      <td>libro</td>
-      <!-- <td th:text="${compra.getTotal()}">vendedor</td> -->
-      <td>total</td>
+      <td th:text="${#dates.format(compra.fechaCompra,'dd MMMM yyyy')}">fecha</td>
       <td><a th:href="@{/app/compra/factura/{id}(id=${compra.id})}">Ver factura</a></td>
-      <!--      <td th:text="${compra.getTotal()}">total</td>-->
     </tr>
     </tbody>
   </table>
